Довавление слайдера в отзывы, работа с адаптивом

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp-sass": "^5.1.0",
     "gulp-sass-glob": "^1.1.0",
     "gulp-sourcemaps": "^3.0.0",
+    "gulp-strip-comments": "^2.5.2",
     "gulp-svg-sprite": "^1.5.0",
     "gulp-svgmin": "^4.1.0",
     "gulp-ttf2woff2": "^4.0.1",
@@ -40,9 +41,11 @@
     "imagemin-jpeg-recompress": "^7.0.0",
     "imagemin-jpegtran": "^7.0.0",
     "imagemin-pngquant": "^9.0.2",
+    "jquery": "^3.6.0",
     "less-plugin-autoprefix": "^2.0.0",
     "node-sass-tilde-importer": "^1.0.2",
     "sass": "^1.49.8",
+    "slick-carousel": "^1.8.1",
     "webpack": "^5.72.0",
     "webpack-stream": "^7.0.0"
   },
